--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -46,6 +46,7 @@
   .card .back {
     height: 100%;
     width: 100%;
+    backface-visibility: hidden;
     text-align: center;
     overflow: hidden;
     transform: rotateY(180deg);
@@ -86,7 +87,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box; */
     /* border-right: 0.2em solid black; */
-    padding: 10px;
+    padding: 25px;
   }
   
   .concerns{
@@ -96,7 +97,7 @@
     /* float:right; */
     width:100%;
     overflow:hidden; 
-    padding: 10px;
+    padding: 25px;
   }
   
   .role{
