--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -17,6 +17,7 @@
     cursor: grab;
     height: 300px;
     width: 100%;
+    margin: 0 auto;
     /* min-width:400px; */
     border: 1px solid #300;
     transform-style: preserve-3d;
@@ -56,6 +57,8 @@
   
   .details{
     /* height: 100%;  */
+    width: 100%;
+    margin: 0 auto;
     background-color: #6994ab; 
     display: flex;
     justify-content: center;
